Disable host a screening button for now

--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -32,9 +32,12 @@
 <div class="grid grid-1-2 screenings-host-screening-wrapper">
     <div class="host-screening lead-in">
         {% show_page_content "host-screening-lead-in" %}
+        {% comment %}
+        Disabled until Fall.
         <button class="host-screening-form-show action-button action-button-a" type="button">
             Host a screening
         </button>
+        {% endcomment %}
     </div>
     <div class="host-screening-instructions">
         <div class="host-screening-instructions-text">
