--- a/growing_cities/templates/pages/news.html
+++ b/growing_cities/templates/pages/news.html
@@ -57,9 +57,9 @@
         <ul class="wordpress-posts">
             {% for entry in entries %}
             <li class="wordpress-post">
-                <a class="wordpress-title" href="{{ entry.link }}">
+                <div class="wordpress-title">
                     {{ entry.title }}
-                </a>
+                </div>
                 <div class="meta wordpress-date">{{ entry.date|date:"F j, Y" }}</div>
                 <div class="wordpress-summary">{{ entry.summary|safe }}</div>
             </li>
