--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -43,6 +43,7 @@
     <script src="{{ STATIC_URL }}js/lib/handlebars/handlebars.runtime.js"></script>
     <script src="{{ STATIC_URL }}js/handlebars-templates.js"></script>
     <script src="{{ STATIC_URL }}js/lib/jquery.scrollto.min.js"></script>
+    <script src="{{ STATIC_URL }}js/lib/jquery.infinitescroll.min.js"></script>
 
     <script src="{{ STATIC_URL }}js/lib/froogaloop.min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/jquery.timePicker.min.js"></script>
