--- a/growing_cities/templates/pages/news.html
+++ b/growing_cities/templates/pages/news.html
@@ -1,5 +1,5 @@
 {% extends "pages/base.html" %}
-{% load cache fiber_tags rsssync_tags twittersync_tags %}
+{% load cache fiber_tags twittersync_tags %}
 
 {% block page_content %}
 <div class="news lead-in">
@@ -52,19 +52,10 @@
     </div>
 
     <div class="grid grid-3-4 news-wordpress">
-
-        {% get_latest_entries "Growing Cities Blog" 5 as "entries" %}
-        <ul class="wordpress-posts">
-            {% for entry in entries %}
-            <li class="wordpress-post">
-                <div class="wordpress-title">
-                    {{ entry.title }}
-                </div>
-                <div class="meta wordpress-date">{{ entry.date|date:"F j, Y" }}</div>
-                <div class="wordpress-summary">{{ entry.summary|safe }}</div>
-            </li>
-            {% endfor %}
-        </ul>
+        <div class="news-wordpress-container"></div>
+        <div class="news-wordpress-nav" style="display: none;">
+            <a href="{% url "news:entries_list" %}">next page</a>
+        </div>
     </div>
 
 </div>
