--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -39,6 +39,18 @@
     })();
     </script>
 
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-23027896-2']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+
     {% compress js %}
     <script src="{{ STATIC_URL }}js/lib/handlebars/handlebars.runtime.js"></script>
     <script src="{{ STATIC_URL }}js/handlebars-templates.js"></script>
