--- a/growing_cities/templates/news/rssentry_list.html
+++ b/growing_cities/templates/news/rssentry_list.html
@@ -1,7 +1,9 @@
 {% for entry in rssentry_list %}
     <div class="wordpress-post">
         <div class="wordpress-title">
-            {{ entry.title }}
+            <a href="{% url "news:entry_detail" pk=entry.pk %}">
+                {{ entry.title }}
+            </a>
         </div>
         <div class="meta wordpress-date">{{ entry.date|date:"F j, Y" }}</div>
         <div class="wordpress-summary">{{ entry.summary|safe }}</div>
