--- a/growing_cities/templates/news/rssentry_list.html
+++ b/growing_cities/templates/news/rssentry_list.html
@@ -1,3 +1,5 @@
+{% load social_bookmarking_tags %}
+
 {% for entry in rssentry_list %}
     <div class="wordpress-post">
         <div class="wordpress-title">
@@ -7,5 +9,8 @@
         </div>
         <div class="meta wordpress-date">{{ entry.date|date:"F j, Y" }}</div>
         <div class="wordpress-summary">{{ entry.summary|safe }}</div>
+        <div class="share-buttons">
+            {% show_bookmarks entry.title "http://"|add:current_site.domain|add:request.path %}
+        </div>
     </div>
 {% endfor %}
