--- a/growing_cities/templates/news/rssentry_detail.html
+++ b/growing_cities/templates/news/rssentry_detail.html
@@ -1,6 +1,7 @@
 {% extends "pages/news.html" %}
 
 {% block news_content %}
+    <a href="{% url "pages_news" %}">Back to all news</a>
     <div class="wordpress-post">
         <div class="wordpress-title">
             {{ rssentry.title }}
