--- a/growing_cities/templates/books/_book_detail.html
+++ b/growing_cities/templates/books/_book_detail.html
@@ -2,7 +2,7 @@
 
 <div>
     <a href="{{ book.link }}" target="_blank">
-        {% thumbnail '150x150' book.image %}
+        {#{% thumbnail '150x150' book.image %}#}
     </a>
 
     <div>
