--- a/growing_cities/templates/stories/story_form.html
+++ b/growing_cities/templates/stories/story_form.html
@@ -1,8 +1,12 @@
+{% load honeypot %}
+
 <form action="{% url "stories:story_create" %}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
     {{ hidden }}
     {% endfor %}
+
+    {% render_honeypot_field "homepage" %}
 
     {{ form.non_field_errors }}
 
