--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -34,12 +34,6 @@
     <h3>Host a Screening</h3>
     <div class="host-screening lead-in">
         {% show_page_content "host-screening-lead-in" %}
-        {% comment %}
-        Disabled until Fall.
-        <button class="host-screening-form-show action-button action-button-a" type="button">
-            Host a screening
-        </button>
-        {% endcomment %}
     </div>
     <div class="host-screening-instructions">
         <div class="host-screening-instructions-text">
@@ -50,7 +44,7 @@
 </div>
 
 <div class="screening-tools-screenings-wrapper">
-    <h3>Screening Tools</h3>
+    <h3>Tools</h3>
     <div class="screening-tools lead-in">
         {% show_page_content "screening-tools-lead-in" %}
     </div>
@@ -60,7 +54,7 @@
 </div>
 
 <div class="screenings-past-screenings-wrapper">
-    <h3>Past Screenings</h3>
+    <h3>Past</h3>
     <div class="past-screenings lead-in">
         {% show_page_content "past-screenings-lead-in" %}
     </div>
