--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="screenings-host-screening-wrapper">
-    <h3>Host a Screening</h3>
+    <h3 id="host-a-screening">Host a Screening</h3>
     <div class="host-screening lead-in">
         {% show_page_content "host-screening-lead-in" %}
     </div>
