Fix button style

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -233,7 +233,7 @@
             <div class="map-overlay-description">
                 Across the country, people are growing their own food. See what's growing near you.
             </div>
-            <div class="button map-overlay-hide" style="max-width: 250px; width: 250px; height: 100px;">
+            <div class="button map-overlay-hide">
                 GO
             </div>
         </div>
